syntax = "proto3";
import "google/protobuf/empty.proto";
import "common.proto";
import "sys_menu.proto";

option go_package = ".;proto";

service Goods {
    // sys_menu
    rpc CreateSysMenu (CreateSysMenuReq) returns (CreateSysMenuRsp); // 创建
    rpc DeleteSysMenu (DeleteSysMenuReq) returns (google.protobuf.Empty); // 删除
    rpc UpdateSysMenu (UpdateSysMenuReq) returns (google.protobuf.Empty); // 修改
    rpc FindSysMenuById (FindSysMenuByIdReq) returns (FindSysMenuRsp); // 根据id查找
    rpc FindSysMenuPage (FindSysMenuPageReq) returns (FindSysMenuPageRsp); // 分页
}